# digital-footprint-watch

./: README.md  pyproject.toml
business/: breakeven.md  business-model-canvas.md  customer-journey.md  dataflow.md  marketing-plan.md  partner-targets.md  tech-spec.md  user-stories.md
docs/: BMC.md  PRD.md  REQUIREMENTS.md  ROADMAP.md  STORIES.md  TECH_SPEC.md
src/: digital_footprint.py  digital_footprint_watch.py  email_service.py  platform.py  user_store.py
tests/: test_crawler.py  test_digital_footprint_watch.py  test_platform.py  test_store.py
