[tool.poetry]
name = "digital-footprint-watch"
version = "0.1.0"
description = "A tool to watch digital footprint by linking GitHub accounts."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
